--- a/public/index.html
+++ b/public/index.html
@@ -1908,14 +1908,7 @@
                     </div>
                     <!-- Upload mode -->
                     <div id="study-notes-upload-mode">
-                        <div class="upload-zone" id="uz-ai-study-notes" data-accept=".pdf,.doc,.docx,.txt,.rtf,application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,text/plain,text/rtf" data-max="20971520">
-                            <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag &amp; drop your file here</p><span>or click to browse</span><small>PDF, Word (.doc, .docx), or Text files &mdash; Max 20 MB</small></div>
-                            <input type="file" class="upload-input" accept=".pdf,.doc,.docx,.txt,.rtf,application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,text/plain,text/rtf">
-                        </div>
-                        <div class="file-preview hidden" data-tool="ai-study-notes">
-                            <div class="file-info"><i class="fas fa-file-alt"></i><div><span class="file-name"></span><span class="file-size"></span></div></div>
-                            <button class="file-remove" onclick="removeFile('ai-study-notes')"><i class="fas fa-times"></i></button>
-                        </div>
+                        <div class="upload-zone multi" id="uz-ai-study-notes" data-accept=".pdf,.doc,.docx,.txt,.rtf,application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,text/plain,text/rtf" data-max="20971520"><div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag &amp; drop files here</p><span>or click to browse (select multiple)</span><small>PDF, Word, or Text &mdash; up to 10 files</small></div><input type="file" class="upload-input" accept=".pdf,.doc,.docx,.txt,.rtf,application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,text/plain,text/rtf" multiple></div><div class="multi-file-list hidden" data-tool="ai-study-notes"></div>
                     </div>
                     <!-- Paste mode -->
                     <div id="study-notes-paste-mode" class="hidden">
@@ -1974,14 +1967,7 @@
                         </div>
                     </div>
                     <div id="flashcards-upload-mode">
-                        <div class="upload-zone" id="uz-ai-flashcards" data-accept=".pdf,.doc,.docx,.txt,.rtf,.md" data-max="20971520">
-                            <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag &amp; drop your file here</p><span>or click to browse</span><small>PDF, Word, Text, or Markdown &mdash; Max 20 MB</small></div>
-                            <input type="file" class="upload-input" accept=".pdf,.doc,.docx,.txt,.rtf,.md">
-                        </div>
-                        <div class="file-preview hidden" data-tool="ai-flashcards">
-                            <div class="file-info"><i class="fas fa-file-alt"></i><div><span class="file-name"></span><span class="file-size"></span></div></div>
-                            <button class="file-remove" onclick="removeFile('ai-flashcards')"><i class="fas fa-times"></i></button>
-                        </div>
+                        <div class="upload-zone multi" id="uz-ai-flashcards" data-accept=".pdf,.doc,.docx,.txt,.rtf,.md" data-max="20971520"><div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag &amp; drop files here</p><span>or click to browse (select multiple)</span><small>PDF, Word, Text, or Markdown &mdash; up to 10 files</small></div><input type="file" class="upload-input" accept=".pdf,.doc,.docx,.txt,.rtf,.md" multiple></div><div class="multi-file-list hidden" data-tool="ai-flashcards"></div>
                     </div>
                     <div id="flashcards-paste-mode" class="hidden">
                         <div class="study-notes-paste-area">
@@ -2023,14 +2009,7 @@
                         </div>
                     </div>
                     <div id="quiz-upload-mode">
-                        <div class="upload-zone" id="uz-ai-quiz" data-accept=".pdf,.doc,.docx,.txt,.rtf,.md" data-max="20971520">
-                            <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag &amp; drop your file here</p><span>or click to browse</span><small>PDF, Word, Text, or Markdown &mdash; Max 20 MB</small></div>
-                            <input type="file" class="upload-input" accept=".pdf,.doc,.docx,.txt,.rtf,.md">
-                        </div>
-                        <div class="file-preview hidden" data-tool="ai-quiz">
-                            <div class="file-info"><i class="fas fa-file-alt"></i><div><span class="file-name"></span><span class="file-size"></span></div></div>
-                            <button class="file-remove" onclick="removeFile('ai-quiz')"><i class="fas fa-times"></i></button>
-                        </div>
+                        <div class="upload-zone multi" id="uz-ai-quiz" data-accept=".pdf,.doc,.docx,.txt,.rtf,.md" data-max="20971520"><div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag &amp; drop files here</p><span>or click to browse (select multiple)</span><small>PDF, Word, Text, or Markdown &mdash; up to 10 files</small></div><input type="file" class="upload-input" accept=".pdf,.doc,.docx,.txt,.rtf,.md" multiple></div><div class="multi-file-list hidden" data-tool="ai-quiz"></div>
                     </div>
                     <div id="quiz-paste-mode" class="hidden">
                         <div class="study-notes-paste-area">
