--- a/public/index.html
+++ b/public/index.html
@@ -1943,7 +1943,7 @@
                     <button class="process-btn" onclick="processStudyNotes()"><i class="fas fa-brain"></i> Generate Notes</button>
                     <div class="processing-status hidden" data-tool="ai-study-notes">
                         <div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div>
-                        <span>Generating notes...</span>
+                        <span class="processing-text" data-default="Generating notes...">Generating notes...</span>
                     </div>
                     <div class="result-section hidden" data-tool="ai-study-notes">
                         <div class="result-info"><i class="fas fa-file-alt"></i><div><span class="result-name"></span><span class="result-size"></span></div></div>
