fix: correct spinner text for each AI tool (flashcards, quiz, paraphrase, etc)

--- a/public/index.html
+++ b/public/index.html
@@ -1988,7 +1988,7 @@
                     <button class="process-btn" onclick="processFlashcards()"><i class="fas fa-clone"></i> Generate Flashcards</button>
                     <div class="processing-status hidden" data-tool="ai-flashcards">
                         <div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div>
-                        <span>Generating flashcards...</span>
+                        <span class="processing-text" data-default="Generating flashcards...">Generating flashcards...</span>
                     </div>
                     <div class="flashcards-result hidden" data-tool="ai-flashcards"></div>
                 </div>
@@ -2037,7 +2037,7 @@
                     <button class="process-btn" onclick="processQuiz()"><i class="fas fa-question-circle"></i> Generate Quiz</button>
                     <div class="processing-status hidden" data-tool="ai-quiz">
                         <div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div>
-                        <span>Generating quiz...</span>
+                        <span class="processing-text" data-default="Generating quiz...">Generating quiz...</span>
                     </div>
                     <div class="quiz-result hidden" data-tool="ai-quiz"></div>
                 </div>
@@ -2067,7 +2067,7 @@
                     <button class="process-btn" onclick="processParaphrase()"><i class="fas fa-sync-alt"></i> Paraphrase</button>
                     <div class="processing-status hidden" data-tool="ai-paraphrase">
                         <div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div>
-                        <span>Paraphrasing...</span>
+                        <span class="processing-text" data-default="Paraphrasing...">Paraphrasing...</span>
                     </div>
                     <div class="paraphrase-result hidden" data-tool="ai-paraphrase"></div>
                 </div>
@@ -2121,7 +2121,7 @@
                     <button class="process-btn" onclick="processCitation()"><i class="fas fa-quote-left"></i> Generate Citation</button>
                     <div class="processing-status hidden" data-tool="citation-gen">
                         <div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div>
-                        <span>Generating citation...</span>
+                        <span class="processing-text" data-default="Generating citation...">Generating citation...</span>
                     </div>
                     <div class="citation-result hidden" data-tool="citation-gen"></div>
                 </div>
@@ -2179,7 +2179,7 @@
                     <button class="process-btn" onclick="processMindMap()"><i class="fas fa-project-diagram"></i> Generate Mind Map</button>
                     <div class="processing-status hidden" data-tool="mind-map">
                         <div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div>
-                        <span>Generating mind map...</span>
+                        <span class="processing-text" data-default="Generating mind map...">Generating mind map...</span>
                     </div>
                     <div class="mindmap-result hidden" data-tool="mind-map"></div>
                 </div>
@@ -2200,7 +2200,7 @@
                     <button class="process-btn" onclick="processYouTubeSummary()"><i class="fas fa-magic"></i> Summarize Video</button>
                     <div class="processing-status hidden" data-tool="youtube-summary">
                         <div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div>
-                        <span>Fetching transcript and summarizing...</span>
+                        <span class="processing-text" data-default="Fetching transcript...">Fetching transcript...</span>
                     </div>
                     <div class="youtube-result hidden" data-tool="youtube-summary"></div>
                 </div>
