ui: remove title tooltips from Note style preset buttons

--- a/public/index.html
+++ b/public/index.html
@@ -1935,9 +1935,9 @@
                     <div class="tool-options">
                         <label class="option-label">Note style</label>
                         <div class="preset-grid" data-tool="study-notes-depth" style="grid-template-columns:repeat(3,1fr)">
-                            <button class="preset-btn" data-val="simple" onclick="selectPreset(this)" title="Short bullet-point summary. Key definitions and core formulas only &mdash; no lengthy derivations. Great for a quick pre-exam scan."><i class="fas fa-list-ul"></i><span>Simple</span><small>Quick review</small></button>
-                            <button class="preset-btn active" data-val="indepth" onclick="selectPreset(this)" title="Comprehensive university-level notes. Every concept explained fully, every formula derived, every example worked step-by-step. Best for deep study."><i class="fas fa-graduation-cap"></i><span>In-Depth</span><small>Full coverage</small></button>
-                            <button class="preset-btn" data-val="eli6" onclick="selectPreset(this)" title="Breaks everything down into simple, everyday terms &mdash; plain language, real-world analogies, no jargon. Perfect if the topic is unfamiliar."><i class="fas fa-child"></i><span>Explain Simply</span><small>No jargon</small></button>
+                            <button class="preset-btn" data-val="simple" onclick="selectPreset(this)"><i class="fas fa-list-ul"></i><span>Simple</span><small>Quick review</small></button>
+                            <button class="preset-btn active" data-val="indepth" onclick="selectPreset(this)"><i class="fas fa-graduation-cap"></i><span>In-Depth</span><small>Full coverage</small></button>
+                            <button class="preset-btn" data-val="eli6" onclick="selectPreset(this)"><i class="fas fa-child"></i><span>Explain Simply</span><small>No jargon</small></button>
                         </div>
                     </div>
                     <div class="tool-options" id="study-notes-math-option">
