Add live ETA timer to AI tool loading states

--- a/public/index.html
+++ b/public/index.html
@@ -1952,6 +1952,7 @@
                     <div class="processing-status hidden" data-tool="ai-study-notes">
                         <div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div>
                         <span class="processing-text" data-default="Generating notes...">Generating notes...</span>
+                        <span class="ai-eta"></span>
                     </div>
                     <div class="result-section hidden" data-tool="ai-study-notes">
                         <div class="result-info"><i class="fas fa-file-alt"></i><div><span class="result-name"></span><span class="result-size"></span></div></div>
@@ -1997,6 +1998,7 @@
                     <div class="processing-status hidden" data-tool="ai-flashcards">
                         <div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div>
                         <span class="processing-text" data-default="Generating flashcards...">Generating flashcards...</span>
+                        <span class="ai-eta"></span>
                     </div>
                     <div class="flashcards-result hidden" data-tool="ai-flashcards"></div>
                 </div>
@@ -2046,6 +2048,7 @@
                     <div class="processing-status hidden" data-tool="ai-quiz">
                         <div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div>
                         <span class="processing-text" data-default="Generating quiz...">Generating quiz...</span>
+                        <span class="ai-eta"></span>
                     </div>
                     <div class="quiz-result hidden" data-tool="ai-quiz"></div>
                 </div>
@@ -2076,6 +2079,7 @@
                     <div class="processing-status hidden" data-tool="ai-paraphrase">
                         <div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div>
                         <span class="processing-text" data-default="Paraphrasing...">Paraphrasing...</span>
+                        <span class="ai-eta"></span>
                     </div>
                     <div class="paraphrase-result hidden" data-tool="ai-paraphrase"></div>
                 </div>
@@ -2188,6 +2192,7 @@
                     <div class="processing-status hidden" data-tool="mind-map">
                         <div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div>
                         <span class="processing-text" data-default="Generating mind map...">Generating mind map...</span>
+                        <span class="ai-eta"></span>
                     </div>
                     <div class="mindmap-result hidden" data-tool="mind-map"></div>
                 </div>
@@ -2209,6 +2214,7 @@
                     <div class="processing-status hidden" data-tool="youtube-summary">
                         <div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div>
                         <span class="processing-text" data-default="Fetching transcript...">Fetching transcript...</span>
+                        <span class="ai-eta"></span>
                     </div>
                     <div class="youtube-result hidden" data-tool="youtube-summary"></div>
                 </div>
