feat: add Luma Planner landing section and portfolio floating button

--- a/public/index.html
+++ b/public/index.html
@@ -356,6 +356,29 @@
                         </div>
                     </div>
 
+                    <div class="landing-planner">
+                        <div class="landing-planner-inner">
+                            <div class="landing-planner-left">
+                                <div class="landing-planner-badge"><i class="fas fa-calendar-check"></i> From the same developer</div>
+                                <h2 class="landing-planner-title">Meet <span>Luma Planner</span></h2>
+                                <p class="landing-planner-desc">A full-stack academic planner for students. Pull all your assignments from Canvas, iCal, or Outlook into one place &mdash; then use Pomodoro, email reminders, and AI study tools to actually stay on top of them.</p>
+                                <div class="landing-planner-chips">
+                                    <span><i class="fas fa-graduation-cap"></i> Canvas &amp; Moodle sync</span>
+                                    <span><i class="fas fa-clock"></i> Pomodoro focus</span>
+                                    <span><i class="fas fa-envelope"></i> Email reminders</span>
+                                    <span><i class="fas fa-brain"></i> AI study tools</span>
+                                    <span><i class="fas fa-table-columns"></i> Kanban board</span>
+                                </div>
+                                <a href="https://planner.lumaplayground.com" target="_blank" rel="noopener" class="landing-planner-btn"><i class="fas fa-arrow-right"></i> Try Luma Planner</a>
+                            </div>
+                            <div class="landing-planner-right">
+                                <div class="landing-planner-icon-wrap">
+                                    <i class="fas fa-calendar-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="landing-drop-cta">
                         <div class="landing-drop-icon"><i class="fas fa-cloud-upload-alt"></i></div>
                         <h2>Drop any file to get started</h2>
@@ -2492,6 +2515,12 @@
         </main>
         <div class="sidebar-overlay" id="sidebarOverlay" onclick="toggleSidebar()"></div>
     </div>
+
+    <!-- Portfolio floating button -->
+    <a href="https://lumaplayground.com" target="_blank" rel="noopener" class="portfolio-float" title="My Portfolio">
+        <span class="portfolio-icon"><i class="fas fa-user"></i></span>
+        <span class="portfolio-label">Portfolio</span>
+    </a>
 
     <!-- Ko-fi floating button -->
     <a href="https://ko-fi.com/lumaexe" target="_blank" rel="noopener" class="kofi-float" title="Support on Ko-fi">
