fix: update portfolio URL to portfolio.lumaplayground.com

--- a/public/index.html
+++ b/public/index.html
@@ -2517,7 +2517,7 @@
     </div>
 
     <!-- Portfolio floating button -->
-    <a href="https://lumaplayground.com" target="_blank" rel="noopener" class="portfolio-float" title="My Portfolio">
+    <a href="https://portfolio.lumaplayground.com/" target="_blank" rel="noopener" class="portfolio-float" title="My Portfolio">
         <span class="portfolio-icon"><i class="fas fa-user"></i></span>
         <span class="portfolio-label">Portfolio</span>
     </a>
