--- a/public/index.html
+++ b/public/index.html
@@ -356,29 +356,6 @@
                         </div>
                     </div>
 
-                    <div class="landing-planner">
-                        <div class="landing-planner-inner">
-                            <div class="landing-planner-left">
-                                <div class="landing-planner-badge"><i class="fas fa-calendar-check"></i> From the same developer</div>
-                                <h2 class="landing-planner-title">Meet <span>Luma Planner</span></h2>
-                                <p class="landing-planner-desc">A full-stack academic planner for students. Pull all your assignments from Canvas, iCal, or Outlook into one place &mdash; then use Pomodoro, email reminders, and AI study tools to actually stay on top of them.</p>
-                                <div class="landing-planner-chips">
-                                    <span><i class="fas fa-graduation-cap"></i> Canvas &amp; Moodle sync</span>
-                                    <span><i class="fas fa-clock"></i> Pomodoro focus</span>
-                                    <span><i class="fas fa-envelope"></i> Email reminders</span>
-                                    <span><i class="fas fa-brain"></i> AI study tools</span>
-                                    <span><i class="fas fa-table-columns"></i> Kanban board</span>
-                                </div>
-                                <a href="https://planner.lumaplayground.com" target="_blank" rel="noopener" class="landing-planner-btn"><i class="fas fa-arrow-right"></i> Try Luma Planner</a>
-                            </div>
-                            <div class="landing-planner-right">
-                                <div class="landing-planner-icon-wrap">
-                                    <i class="fas fa-calendar-check"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
                     <div class="landing-drop-cta">
                         <div class="landing-drop-icon"><i class="fas fa-cloud-upload-alt"></i></div>
                         <h2>Drop any file to get started</h2>
@@ -405,6 +382,30 @@
                             <div class="landing-feature-icon"><i class="fas fa-download"></i></div>
                             <h3>Install as an App</h3>
                             <p>LumaTools is a Progressive Web App. Install it to your desktop or phone for instant access and a native app experience.</p>
+                        </div>
+                    </div>
+
+                    <div class="landing-planner">
+                        <div class="landing-planner-inner">
+                            <div class="landing-planner-left">
+                                <div class="landing-planner-badge"><i class="fas fa-calendar-check"></i> From the same developer</div>
+                                <h2 class="landing-planner-title">Meet <span>Luma Planner</span></h2>
+                                <p class="landing-planner-desc">You&rsquo;ll never miss an assignment again. Luma Planner pulls your deadlines from Canvas, Moodle, iCal, or Outlook into one clean dashboard &mdash; then keeps you on track with Pomodoro timers, email reminders, AI study tools, and custom themes.</p>
+                                <div class="landing-planner-chips">
+                                    <span><i class="fas fa-graduation-cap"></i> Canvas &amp; Moodle sync</span>
+                                    <span><i class="fas fa-clock"></i> Pomodoro focus</span>
+                                    <span><i class="fas fa-envelope"></i> Email reminders</span>
+                                    <span><i class="fas fa-brain"></i> AI study tools</span>
+                                    <span><i class="fas fa-table-columns"></i> Kanban board</span>
+                                    <span><i class="fas fa-palette"></i> Custom themes</span>
+                                </div>
+                                <a href="https://planner.lumaplayground.com" target="_blank" rel="noopener" class="landing-planner-btn"><i class="fas fa-arrow-right"></i> Try Luma Planner</a>
+                            </div>
+                            <div class="landing-planner-right">
+                                <div class="landing-planner-icon-wrap">
+                                    <i class="fas fa-calendar-check"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
