--- a/public/index.html
+++ b/public/index.html
@@ -1243,24 +1243,31 @@
             <!-- ──────────── VIDEO FRAME EXTRACT ──────────── -->
             <div class="tool-panel" id="tool-video-frame">
                 <div class="tool-header">
-                    <h2><i class="fas fa-camera"></i> Video Frame Extract</h2>
-                    <p>Capture a single frame from any video at a specific timestamp</p>
+                    <h2><i class="fas fa-camera"></i> Frame Extract</h2>
+                    <p>Capture a single frame from a video or GIF as a PNG image</p>
                 </div>
                 <div class="tool-body">
-                    <div class="upload-zone" id="uz-video-frame" data-accept="video/*" data-max="524288000">
-                        <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag & drop your video here</p><span>or click to browse</span><small>MP4, WebM, AVI, MOV, MKV &mdash; Max 500 MB</small></div>
-                        <input type="file" class="upload-input" accept="video/*">
+                    <div class="upload-zone" id="uz-video-frame" data-accept="video/*,.gif" data-max="524288000">
+                        <div class="upload-zone-content"><i class="fas fa-cloud-upload-alt"></i><p>Drag & drop your video or GIF here</p><span>or click to browse</span><small>MP4, WebM, AVI, MOV, MKV, GIF &mdash; Max 500 MB</small></div>
+                        <input type="file" class="upload-input" accept="video/*,.gif">
                     </div>
                     <div class="file-preview hidden" data-tool="video-frame">
                         <div class="file-info"><i class="fas fa-file-video"></i><div><span class="file-name"></span><span class="file-size"></span></div></div>
                         <button class="file-remove" onclick="removeFile('video-frame')"><i class="fas fa-times"></i></button>
                     </div>
-                    <div class="tool-options">
+                    <div class="tool-options" id="frameTimestampOption">
                         <label class="option-label">Timestamp</label>
                         <div class="time-inputs">
                             <div class="time-group" style="flex:1"><label>Time</label><input type="text" id="frameTimestamp" placeholder="00:00:05" value="00:00:00"></div>
                         </div>
                         <small class="option-hint">Format: HH:MM:SS or HH:MM:SS.mmm</small>
+                    </div>
+                    <div class="tool-options hidden" id="frameIndexOption">
+                        <label class="option-label">Frame Number</label>
+                        <div class="time-inputs">
+                            <div class="time-group" style="flex:1"><label>Frame</label><input type="number" id="frameIndex" placeholder="0" value="0" min="0"></div>
+                        </div>
+                        <small class="option-hint">0 = first frame, 1 = second frame, etc.</small>
                     </div>
                     <button class="process-btn" onclick="processFile('video-frame')"><i class="fas fa-camera"></i> Extract Frame</button>
                     <div class="processing-status hidden" data-tool="video-frame"><div class="processing-spinner"><i class="fas fa-circle-notch fa-spin"></i></div><span>Processing...</span></div>
