feat: add visual frame scrubber for video-frame and gif-frame-remove tools

--- a/public/index.html
+++ b/public/index.html
@@ -2651,6 +2651,7 @@
     <script src="js/redact.js"></script>
     <script src="js/crop.js"></script>
     <script src="js/wasm.js"></script>
+    <script src="js/frame-scrubber.js"></script>
     <script src="js/file-tools.js"></script>
     <script src="js/batch.js"></script>
     <script src="js/tools-misc.js"></script>
